<resources>
    <string name="app_name">渝新欧商城</string>
    <string name="action_settings">Settings</string>
    <string name="loading">正在加载中...</string>
    <string name="copy_success">复制成功</string>
    <string name="tip_no_internet">当前没有可用的网络连接</string>
    <string name="login_success">登陆成功</string>
    <string name="message">我的收益</string>
    <string name="Contribute">排行榜</string>
    <string name="vipuser">VIP会员</string>
    <string name="blog">等级</string>
    <string name="team">设置</string>
    <string name="user_score">积分</string>
    <string name="favorite">收藏</string>
    <string name="following">关注</string>
    <string name="follower">粉丝</string>
    <string name="my_information_unlogin_tips">未登录</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="user_live">直播</string>
    <string name="loginout">退出登录</string>
    <string name="editInfo">编辑资料</string>
    <string name="editnickpromp">昵称最多8个字</string>
    <string name="editsignpromp">最多输入20个字</string>
    <string name="selectphotoonalbu">从相册选择</string>
    <string name="selectphotooncamera">拍照</string>
    <string name="balance">账户余额</string>
    <string name="select_pay">请选择支付方式</string>
    <string name="myleve">等级</string>
    <string name="editsuccess">修改成功</string>
    <string name="editfail">修改失败</string>
    <string name="wxpay">微信支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="myprofit">我的收益</string>
    <string name="commonproblem">常见问题</string>
    <string name="setting">设置</string>
    <string name="pushmanage">推送管理</string>
    <string name="about">关于我们</string>
    <string name="feedback">用户反馈</string>
    <string name="blanklist">黑名单</string>
    <string name="attention">关注</string>
    <string name="hot">热门</string>
    <string name="daren">最新</string>
    <string name="attentionlive">关注的好友直播</string>
    <string name="attention_title1">你的好友静静悄悄</string>
    <string name="attention_title2">此时还没有直播</string>
    <string name="attention_title3">去看看新精彩直播</string>
    <string name="lookin">在看</string>
    <string name="gobackindex">返回首页</string>
    <string name="liveend">直播结束</string>
    <string name="sendchat">发送</string>
    <string name="create_edit_text_hint">直播标题</string>
    <string name="startLive">开始直播</string>
    <string name="plasesettitle">请设置一个标题吧</string>
    <string name="iscloselive">是否关闭直播</string>
    <string name="livestart">直播开始</string>
    <string name="sendgift">发送</string>
    <string name="senderror">赠送失败请重试</string>
    <string name="liansendgift">连送</string>
    <string name="report">举报</string>
    <string name="follow2">关注</string>
    <string name="reply">回复</string>
    <string name="home">主页</string>
    <string name="default_address">难道在火星?</string>
    <string name="follow">关注主播</string>
    <string name="alreadyfollow">已关注</string>
    <string name="age">年龄</string>
    <string name="number">ID</string>
    <string name="sign">个性签名</string>
    <string name="live">直播</string>
    <string name="fans">粉丝</string>
    <string name="privatechat">私信</string>
    <string name="lahei">拉黑</string>
    <string name="manage">管理</string>
    <string name="no1">No.1</string>
    <string name="no2">No.2</string>
    <string name="no3">No.3</string>
    <string name="paymode">支付方式:</string>
    <string name="defaultsign">没写签名</string>
    <string name="send">送出</string>
    <string name="testin">测试中,尽情期待...</string>
    <string name="liverecord">直播记录</string>
    <string name="friends">已关注</string>
    <string name="nofollow">未关注</string>
    <string name="payresult">支付结果</string>
    <string name="complete">完成</string>
    <string name="area">地区</string>
    <string name="search">搜索</string>
    <string name="default_prompt">全时间都在等待你直播</string>
    <string name="reportsuccess">举报成功</string>
    <string name="pullblack">拉黑</string>
    <string name="relieveblack">解除拉黑</string>
    <string name="blacklist">黑名单</string>
    <string name="plase_input_phone_num">请填写手机号码</string>
    <string name="plase_check_you_num_is_correct">请检查手机号码是否输入正确</string>
    <string name="codehasbeensend">验证码已发送</string>
    <string name="livestartpush">直播消息提醒</string>
    <string name="push">推送管理</string>
    <string name="determine">确定</string>
    <string name="startliveerror">开播失败</string>
    <string name="searchmusic">搜索歌曲</string>
    <string name="diange">点歌</string>
    <string name="select">选择</string>
    <string name="download">下载</string>
    <string name="downloadError">下载失败</string>
    <string name="initDataError">初始化数据失败~</string>
    <string name="musicEnd">结束</string>
    <string name="authenticate">实名认证</string>
    <string name="private_chat">私信</string>
    <string name="main_page">主页</string>
    <string name="change_pass">重置密码</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="weman">女</string>
    <string name="change_info">修改资料</string>
    <string name="loading_error">加载失败</string>
    <string name="open_your_live">快快开启你的直播吧</string>
    <string name="send_code">发验证码</string>
    <string name="vaildate_code">验证码</string>
    <string name="plase_fill_in_vaildate_code">请填写短信验证码</string>
    <string name="pass">密码</string>
    <string name="plase_fill_in_pass">请填写密码</string>
    <string name="plase_fill_in_phone">请填写手机号码</string>
    <string name="plase_error_in_phone">请填写正确的手机号码</string>
    <string name="confirm_pass">确认密码</string>
    <string name="again_fill_in_pass">请再次输入密码</string>
    <string name="reset_pass">重置密码</string>
    <string name="level">等级</string>
    <string name="live_record">直播记录</string>
    <string name="not_hava_live_record">现在还没有直播记录</string>
    <string name="register">注册</string>
    <string name="login">手机号登录</string>
    <string name="edit_info">编辑资料</string>
    <string name="head">头像</string>
    <string name="nick_name">昵称</string>
    <string name="fill_in_birthday">请输入生日</string>
    <string name="not_have_live">现在还没有主播</string>
    <string name="immediate_register">立即注册</string>
    <string name="find_pass">找回密码?</string>
    <string name="immediate_login">立即登陆</string>
    <string name="week_order">周榜</string>
    <string name="all_order">总榜</string>
    <string name="my_profit">我的收益</string>
    <string name="can_cash_money">可提现金额</string>
    <string name="day_can_cash_money">今日可提现金额</string>
    <string name="cash">提现</string>
    <string name="pass_room">密码房间</string>
    <string name="open_charge_mode">开启收费模式</string>
    <string name="money">金额</string>
    <string name="clear_cache">清理缓存</string>
    <string name="check_new">检查更新</string>
    <string name="select_login_mode">请选择登录方式</string>
    <string name="clause">登录即代表你同意服务条款和隐私</string>
    <string name="ignore_read">忽略未读</string>
    <string name="cancel">取消</string>
    <string name="is_back">是否退出</string>
    <string name="live_num">观看人数</string>
    <string name="search_hint">请输入要搜索的昵称或ID</string>
    <string name="input_money">请输入金额</string>
    <string name="immediately_pay">立刻支付</string>
    <string name="close_live">关闭直播</string>
    <string name="disable_user">禁用账号</string>
    <string name="kick">踢人</string>
    <string name="shutup">禁言</string>
    <string name="set_manage">设为管理</string>
    <string name="manage_list">管理员列表</string>
    <string name="me">我的</string>
    <string name="older_pass">旧密码</string>
    <string name="input_older_pass">请输入旧密码</string>
    <string name="new_pass">新密码</string>
    <string name="input_new_pass">请输入新密码</string>
    <string name="commit_pass">确认密码</string>
    <string name="again_pass">请再次输入密码</string>
    <string name="confirm_change">确认修改</string>
    <string name="save">保存</string>
    <string name="birthday">生日</string>
    <string name="already_follow">已关注</string>
    <string name="my_fans">我的粉丝</string>
    <string name="my_follow">我的关注</string>
    <string name="user_id">账号ID(点击复制)</string>
    <string name="game_live">游戏直播</string>
    <string name="game">游戏</string>
    <string name="game_fruits_rule">游戏开始后，您可以给认为将被抓的小精灵送礼点赞。当游戏结束您选择的小精灵被抓到，您可以获取1倍的钻石数量</string>
    <string-array name="live_start_share_open">
        <item>微博分享已开</item>
        <item>微信分享已开</item>
        <item>朋友圈分享已开</item>

        <item>QQ分享已开</item>
        <item>QQ空间分享已开</item>
    </string-array>
    <string-array name="live_start_share_close">
        <item>微博分享已关</item>
        <item>微信分享已关</item>
        <item>朋友圈分享已关</item>

        <item>QQ分享已关</item>
        <item>QQ空间分享已关</item>
    </string-array>
    <string name="amp_val">0f5ddb60a2b499889a04c12743a96c03</string>
    <string name="bugly_val">e0231048fa</string>
    <string name="jpush_val">1dac5d346d1f3da220d5c78c</string>
    <string name="huanxin">weipeizhi#weipeizhi</string>
    <string name="start_game">开始游戏</string>
    <string name="end">结束</string>
    <string name="charge_time">计时付费(按分钟收费)</string>
    <string name="user_login">用户登录</string>
    <string name="user_register">用户注册</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_save">保存</string>
    <string name="btn_return">返回</string>
    <string name="video_decoding">视频正在解码中，请稍等...</string>
    <string name="video_generating">视频生成中...</string>
    <string name="video_edit">编辑视频</string>
    <string name="video_join">视频合成</string>
    <string name="video_drag_sort">视频将按照列表顺序进行合成，您可以长按拖动进行片段顺序调整。</string>
    <string name="video_join_preview">片段合成预览</string>
    <string name="video_preview">视频预览</string>
    <string name="video_only_save">仅保存</string>
    <string name="video_save_and_publish">保存并发布</string>
    <string name="video_edit_segment">请拖拽两侧滑块选择剪裁区域</string>
    <string name="video_repeate_segment">设置重复的片段</string>
    <string name="video_reverse">开启视频倒放</string>
    <string name="vod_ffplay">ffplay</string>
    <string name="vod_exo">exo</string>
    <string name="delete">删除</string>
    <string name="music_empty">空空如也</string>
    <string name="music_loading">正在加载本地音乐...</string>
    <string name="title_activity_rtmp_room_demo">RtmpRoomDemoActivity</string>
    <string name="title_activity_test_test_test_acvitity">TestTestTestAcvitity</string>
    <string name="rtmproom_room_iterm_members">%1$d 人在房间里...</string>
    <string name="video_editer_set_speed">设置慢速片段</string>
    <string name="video_editer_bubble">气泡字幕</string>
    <string name="video_pre_process">视频预处理</string>
    <string name="paly_alert">请填写直播标题</string>
    <string name="paly_copy">直播录像</string>
    <string name="start_play">开始直播</string>
    <string name="classname">请输入课程名称</string>
    <string name="class_password">请填写课程密码</string>
    <string name="dearuser">亲爱的用户</string>
    <string name="alert">收到的付费礼物可领取酬劳费</string>
    <string name="project">为保证</string>
    <string name="surfty">资金安全</string>
    <string name="befor_play">开播前请通过</string>
    <string name="requst_user">身份认证</string>
    <string name="binguser">绑定账户</string>
    <string name="requset_tiyan">通过认证可获得更好的体验</string>
    <string name="please_agree">请同意</string>
    <string name="user_xiye">主播认证协议</string>
    <string name="truename">真实姓名</string>
    <string name="puttruename">请输入你的真实姓名</string>
    <string name="phone_number">手机号码</string>
    <string name="put_phonenumber">请输入你的手机号码</string>
    <string name="bank_number">银行卡号</string>
    <string name="put_banke_number">请输入你的银行卡号</string>
    <string name="open_bank">开户银行</string>
    <string name="put_open_bank">请输入你的开户银行</string>
    <string name="open_bank_address">开户地址</string>
    <string name="put_bank_adress">请输入你的开户地址</string>
    <string name="bank_name">支行名字</string>
    <string name="live_myvoice">我的小视频</string>
</resources>