<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_background">

    <com.liren.live.ui.customviews.ActivityTitle
        android:id="@+id/view_title"
        android:background="@color/white"
        app:titleColor="@color/black"
        app:titleText="@string/reset_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <com.liren.live.widget.BlackEditText
                android:inputType="number"
                android:id="@+id/et_loginphone"
                style="@style/edit_input_not_fill"
                android:hint="@string/plase_input_phone_num"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="40dp" />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/btn_phone_login_send_code"
                android:textColor="@color/white"
                android:text="@string/send_code"
                android:background="@drawable/btn_common"
                android:layout_width="70dp"
                android:layout_height="35dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.liren.live.widget.BlackEditText
                style="@style/edit_input_not_fill"
                android:id="@+id/et_logincode"
                android:hint="@string/plase_fill_in_vaildate_code"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="40dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.liren.live.widget.BlackEditText
                android:id="@+id/et_password"
                style="@style/edit_input_not_fill"
                android:hint="@string/plase_fill_in_pass"
                android:inputType="textPassword"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="40dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.liren.live.widget.BlackEditText
                style="@style/edit_input_not_fill"
                android:id="@+id/et_secondPassword"
                android:hint="@string/again_fill_in_pass"
                android:inputType="textPassword"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="40dp" />

        </LinearLayout>

    </LinearLayout>

    <com.liren.live.widget.BlackButton
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/btn_doResetPassword"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_common"
        android:text="@string/reset_pass"
        android:layout_width="300dp"
        android:layout_height="40dp" />

</LinearLayout>